Minor alteration to header link sizing to avoid broken layout at breakpoint.

--- a/pattern-library/src/scss/specialised/_header-nav.scss
+++ b/pattern-library/src/scss/specialised/_header-nav.scss
@@ -20,10 +20,11 @@
   @include mq($upd-site-header-breakpoint-navigation) {
     display: inline-block;
     vertical-align: top;
+    margin-right: -2px;
   }
 }
 
-
+color
 .header-nav__link {
   @extend %link-bare;
 
